connected to production

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 herokudb = `https://shrouded-hollows-87789.herokuapp.com/`
+localhost = 'http://localhost:8000/api'
+<img src={`data:image/jpeg;base64,${binary_data}`} />
